; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_bootimg.c_bootimg_header_load.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_bootimg.c_bootimg_header_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64, i64*, i64, i64 }

@BOOT_NAME_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@BOOT_ARGS_SIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"cmdline\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"id\00", align 1
@BOOT_EXTRA_ARGS_SIZE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [14 x i8] c"extra_cmdline\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*)* @bootimg_header_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bootimg_header_load(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @r_buf_size(i32 %11)
  %13 = sext i32 %12 to i64
  %14 = icmp ult i64 %13, 32
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %85

16:                                               ; preds = %2
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %8, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %23 = bitcast %struct.TYPE_5__* %22 to i32*
  %24 = call i32 @r_buf_read_at(i32 %21, i32 0, i32* %23, i32 32)
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 3
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to i8*
  %29 = load i32, i32* @BOOT_NAME_SIZE, align 4
  %30 = call i8* @r_str_ndup(i8* %28, i32 %29)
  store i8* %30, i8** %6, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %38

32:                                               ; preds = %16
  %33 = load i32*, i32** %5, align 8
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @sdb_set(i32* %33, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %34, i32 0)
  %36 = load i8*, i8** %6, align 8
  %37 = call i32 @free(i8* %36)
  br label %38

38:                                               ; preds = %32, %16
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 2
  %41 = load i64, i64* %40, align 8
  %42 = inttoptr i64 %41 to i8*
  %43 = load i32, i32* @BOOT_ARGS_SIZE, align 4
  %44 = call i8* @r_str_ndup(i8* %42, i32 %43)
  store i8* %44, i8** %6, align 8
  %45 = icmp ne i8* %44, null
  br i1 %45, label %46, label %52

46:                                               ; preds = %38
  %47 = load i32*, i32** %5, align 8
  %48 = load i8*, i8** %6, align 8
  %49 = call i32 @sdb_set(i32* %47, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %48, i32 0)
  %50 = load i8*, i8** %6, align 8
  %51 = call i32 @free(i8* %50)
  br label %52

52:                                               ; preds = %46, %38
  store i32 0, i32* %7, align 4
  br label %53

53:                                               ; preds = %67, %52
  %54 = load i32, i32* %7, align 4
  %55 = icmp slt i32 %54, 8
  br i1 %55, label %56, label %70

56:                                               ; preds = %53
  %57 = load i32*, i32** %5, align 8
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 1
  %60 = load i64*, i64** %59, align 8
  %61 = load i32, i32* %7, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i64, i64* %60, i64 %62
  %64 = load i64, i64* %63, align 8
  %65 = trunc i64 %64 to i32
  %66 = call i32 @sdb_num_set(i32* %57, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 %65, i32 0)
  br label %67

67:                                               ; preds = %56
  %68 = load i32, i32* %7, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %7, align 4
  br label %53

70:                                               ; preds = %53
  %71 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %72 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %71, i32 0, i32 0
  %73 = load i64, i64* %72, align 8
  %74 = inttoptr i64 %73 to i8*
  %75 = load i32, i32* @BOOT_EXTRA_ARGS_SIZE, align 4
  %76 = call i8* @r_str_ndup(i8* %74, i32 %75)
  store i8* %76, i8** %6, align 8
  %77 = icmp ne i8* %76, null
  br i1 %77, label %78, label %84

78:                                               ; preds = %70
  %79 = load i32*, i32** %5, align 8
  %80 = load i8*, i8** %6, align 8
  %81 = call i32 @sdb_set(i32* %79, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0), i8* %80, i32 0)
  %82 = load i8*, i8** %6, align 8
  %83 = call i32 @free(i8* %82)
  br label %84

84:                                               ; preds = %78, %70
  store i32 1, i32* %3, align 4
  br label %85

85:                                               ; preds = %84, %15
  %86 = load i32, i32* %3, align 4
  ret i32 %86
}

declare dso_local i32 @r_buf_size(i32) #1

declare dso_local i32 @r_buf_read_at(i32, i32, i32*, i32) #1

declare dso_local i8* @r_str_ndup(i8*, i32) #1

declare dso_local i32 @sdb_set(i32*, i8*, i8*, i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @sdb_num_set(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
